# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-21 20:01:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-132

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-132


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 19:38:00 GMT	John Goerzen <jgoerzen@complete.org>	patch-131

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-131


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 19:17:58 GMT	John Goerzen <jgoerzen@complete.org>	patch-130

    Summary:
      It compiles
    Revision:
      missingh--head--0.7--patch-130


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 19:05:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-129

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-129


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 18:01:53 GMT	John Goerzen <jgoerzen@complete.org>	patch-128

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-128


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 17:21:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-127

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-127


    modified files:
     ChangeLog TODO libsrc/MissingH/Network/FTP/ParserServer.hs
     libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 16:37:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-126

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-126


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/ParserServer.hs


2004-12-21 16:24:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-125

    Summary:
      Compilation fixes
    Revision:
      missingh--head--0.7--patch-125

